force-app/main/default/objects/Survey__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>Field to capture survey answer given by dealer</description>
    <label>Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>