force-app/main/default/objects/Survey__c/fields/EventIdentifier__c.field-meta.xml
<CustomField>
    <fullName>EventIdentifier__c</fullName>
    <description>Event name</description>
    <label>Event Identifier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>