force-app/main/default/objects/Survey__c/fields/isDisplayed__c.field-meta.xml
<CustomField>
    <fullName>isDisplayed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be Showed in Layout</description>
    <inlineHelpText>To be Showed in Layout</inlineHelpText>
    <label>isDisplayed</label>
    <type>Checkbox</type>
</CustomField>