force-app/main/default/objects/Survey__c/fields/OptionType__c.field-meta.xml
<CustomField>
    <fullName>OptionType__c</fullName>
    <description
  >Type of the question Text/ Sub Question/ Dependent question</description>
    <label>Option Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>