force-app/main/default/objects/Survey__c/fields/ParentQuestionCode__c.field-meta.xml
<CustomField>
    <fullName>ParentQuestionCode__c</fullName>
    <description>Related question code</description>
    <label>Parent Question Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>