force-app/main/default/objects/Survey__c/fields/QuestionNumber__c.field-meta.xml
<CustomField>
    <fullName>QuestionNumber__c</fullName>
    <label>Question Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>