force-app/main/default/objects/Survey__c/fields/ShortDescription__c.field-meta.xml
<CustomField>
    <fullName>ShortDescription__c</fullName>
    <description
  >alternate text for original question if it exceeds length 255</description>
    <label>Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>