force-app/main/default/objects/Survey__c/fields/SurveyQuestion__c.field-meta.xml
<CustomField>
    <fullName>SurveyQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SurveyTemplate Item</label>
    <referenceTo>SurveyQuestion__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>