force-app/main/default/objects/Survey__c/fields/TemplateName__c.field-meta.xml
<CustomField>
    <fullName>TemplateName__c</fullName>
    <description>Mathcing Template Name</description>
    <inlineHelpText>Mathcing Template Name</inlineHelpText>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>